<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuFonemAwalan">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pick_question_layout"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="#00BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/soal1"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:text="@string/_1"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/soal2"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:text="@string/_2"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/soal3"
            app:layout_constraintStart_toEndOf="@+id/soal1"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/soal3"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:layout_marginEnd="10dp"
            android:text="@string/_3"
            android:textSize="48sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/question_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/app_background"
        app:layout_constraintBottom_toTopOf="@+id/pick_question_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.widget.Button
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/back_button_state"
            android:drawableStart="@drawable/ic_back"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/pilih_soal_nomor_nkeberapa_yang_kamu_nmau_pilih"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>